--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MobiV</title>
+    <title><%= yield(:title) %> | MobiV</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,59 @@
   </head>
 
   <body>
-    <%= yield %>
+   
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">MobiV</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <%= link_to "Home", "/", class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "About", about_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Products", products_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Contact", contact_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <footer class="container py-5 fixed-bottom">
+      <div class="row">
+        <div class="col-12 col-md">
+          <small class="d-block mb-3 text-muted">© 2020</small>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Products</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Scooter</a></li>
+            <li><a class="text-muted" href="#">Accesories</a></li>       
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">About 1</a></li>
+            <li><a class="text-muted" href="#">About 2</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Contact</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">contact 1</a></li>
+            <li><a class="text-muted" href="#">contact 2</a></li>
+          </ul>
+        </div>    
+      </div>
+    </footer>
   </body>
 </html>
