--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title><%= yield(:title) %> | MobiV</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,33 +11,41 @@
   </head>
 
   <body>
-   
+    <%# Navbar %>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">MobiV</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <%= link_to "Home", "/", class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "About", about_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Products", products_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Contact", contact_path, class: 'nav-link' %>
-          </li>
-        </ul>
-      </div>
+      <a class="navbar-brand" href="#">MobiV</a>     
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <%= link_to "Home", "/", class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "About", about_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Products", products_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Contact", contact_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign in", signin_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign up", signup_path, class: 'nav-link' %>
+            </li>
+          </ul>
+        </div>
     </nav>
+    <%# Body Content %>
     <div class="container">
       <%= yield %>
     </div>
-    <footer class="container py-5 fixed-bottom">
+    <%# Footer %>
+    <footer class="container py-5">
       <div class="row">
         <div class="col-12 col-md">
           <small class="d-block mb-3 text-muted">© 2020</small>
