--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -1,4 +1,99 @@
 <% provide(:title, "Home") %>
 
-<h1>Main#home</h1>
-<p>Find me in app/views/main/home.html.erb</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <div class="pt-md-5 px-md-5 text-center">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Welcome</h2>
+                    <p class="lead">subheader</p>
+                </div>
+                <div class="my-3 p-3">
+                    <p>This is text for the product page This is text for the product page This is text for the product page This is text for the product page This is text for the product page</p>
+                </div>
+                <div class="my-3 p-3">
+                    <button type="button" class="btn btn-dark">Button</button>
+                    <button type="button" class="btn btn-light">Button</button>
+                </div>
+            </div>
+        </div>    
+        <div class="col">
+            <div class="pt-md-5 px-md-5 text-center">
+                <div class="my-3 p-3">
+                    <img src="" class="img-fluid" alt="This is an image">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <div class="col align-self-center pt-md-5 px-md-5 text-center">
+                    <div class="my-3 p-3">
+                        <h2 class="display-5">Scooters</h2>
+                        <p class="lead">subheader</p>
+                    </div>                
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <img src="" class="img-fluid" alt="This is an image">
+                    <h3 class="display-5">Scooter A</h3>
+                    <p class="lead">description scooter</p>
+                     <button type="button" class="btn btn-dark">Button</button>
+                </div>
+                <div class="col text-center">
+                    <img src="" class="img-fluid" alt="This is an image">
+                     <h3 class="display-5">Scooter B</h3>
+                    <p class="lead">description scooter</p>
+                     <button type="button" class="btn btn-dark">Button</button>
+                </div>
+                <div class="col text-center">
+                    <img src="" class="img-fluid" alt="This is an image">
+                     <h3 class="display-5">Scooter C</h3>
+                    <p class="lead">description scooter</p>
+                     <button type="button" class="btn btn-dark">Button</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <div class="col align-self-center pt-md-5 px-md-5 text-center">
+                    <div class="my-3 p-3">
+                        <h2 class="display-5">Accessories</h2>
+                        <p class="lead">subheader accessories</p>
+                    </div>                
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <div class="border-accessories">
+                        <img src="" class="img-fluid" alt="This is an image">
+                        <h3 class="display-5">Accessories A</h3>
+                        <p class="lead">description Accessories</p>
+                         <button type="button" class="btn btn-dark mb-3">Button</button>
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <div class="border-accessories">
+                        <img src="" class="img-fluid" alt="This is an image">
+                        <h3 class="display-5">Accessories B</h3>
+                        <p class="lead">description Accessories</p>
+                         <button type="button" class="btn btn-dark mb-3">Button</button>
+                    </div>
+                </div>
+                <div class="col text-center">
+                    <div class="border-accessories">
+                        <img src="" class="img-fluid" alt="This is an image">
+                        <h3 class="display-5">Accessories C</h3>
+                        <p class="lead">description Accessories</p>
+                         <button type="button" class="btn btn-dark mb-3">Button</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
