--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -30,13 +30,7 @@
             </li>
             <li class="nav-item">
               <%= link_to "Contact", contact_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign in", signin_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign up", signup_path, class: 'nav-link' %>
-            </li>
+            </li>           
           </ul>
         </div>
     </nav>
@@ -70,7 +64,20 @@
             <li><a class="text-muted" href="#">contact 1</a></li>
             <li><a class="text-muted" href="#">contact 2</a></li>
           </ul>
-        </div>    
+        </div>
+        <div class="col footer-social">
+          <ul class="list-unstyled">
+            <li>
+              <a href="https://www.facebook.com/"><i id="social-fb" class="fab fa-facebook-square fa-2x"></i></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/"><i id="social-tw" class="fab fa-twitter-square fa-2x"></i></a>
+            </li>                        
+            <li>
+              <a href="mailto:mobiv@gmail.com"><i id="social-em" class="fas fa-envelope-square fa-2x"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
