--- a/MobiV/app/views/main/products.html.erb
+++ b/MobiV/app/views/main/products.html.erb
@@ -1,4 +1,19 @@
 <% provide(:title, "Products") %>
 
-<h1>Main#products</h1>
-<p>Find me in app/views/main/products.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            <img src="" class="img-fluid" alt="This is a product image">
+        </div>
+        <div class="col-sm-4">
+            <h4>Product Model</h4>
+            <h6>Product Price</h6>
+            <button type="button" class="btn btn-dark">Add to Cart</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            <p>This is the description for the current product</p>
+        </div>    
+    </div>
+</div>
