--- a/MobiV/app/assets/stylesheets/application.scss
+++ b/MobiV/app/assets/stylesheets/application.scss
@@ -12,39 +12,43 @@
  *
  */
 // to import bootstrap
- @import "bootstrap";
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
- .border-accessories {
-    border: 2px solid #8080804a;
-    border-radius: 10px;
+.border-accessories {
+   border: 2px solid #8080804a;
+   border-radius: 10px;
 }
 
 .form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
+   width: 100%;
+   max-width: 330px;
+   padding: 15px;
+   margin: auto;
 }
 
 .form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
+   position: relative;
+   box-sizing: border-box;
+   height: auto;
+   padding: 10px;
+   font-size: 16px;
 }
 
 .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+   margin-bottom: -1px;
+   border-bottom-right-radius: 0;
+   border-bottom-left-radius: 0;
 }
 
 .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+   margin-bottom: 10px;
+   border-top-left-radius: 0;
+   border-top-right-radius: 0;
 }
 
-
+.footer-social li {   
+   display:inline-block;   
+}
 
