--- a/MobiV/app/views/main/about.html.erb
+++ b/MobiV/app/views/main/about.html.erb
@@ -1,6 +1,14 @@
 <% provide(:title, "About") %>
 
-<h1>Main#about</h1>
-<p>Find me in app/views/main/about.html.erb</p>
+<div class="container">
+    <div class="row">
+		<div class="col">			
+			<h1>About <span>Mobiv</span></h1>
+			<h3>Lorem ipsum dolor sit amet </h3>
+			<p class="about-paddingB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet dolor libero, eget venenatis mauris finibus dictum. Vestibulum quis elit eget neque porttitor congue non sit amet dolor. Proin pretium purus a lorem ornare </p>
+			<p>sed lobortis pulvinar. Integer laoreet mi id eros porta euismod. Suspendisse potenti. Nulla eros mauris, convallis et sem tempus, viverra hendrerit sapien</p>				
+	    </div>
+    </div>
+</div>
 
 
