--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
               <%= link_to "Products", products_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
+              <%= link_to "View Cart", "/cart", class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
               <%= link_to "Contact", contact_path, class: 'nav-link' %>
             </li>
             
