--- a/MobiV/app/views/products/index.html.erb
+++ b/MobiV/app/views/products/index.html.erb
@@ -19,9 +19,16 @@
         <td><%= product.description %></td>
         <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if session[:login] == 1 %> 
+          <td><%= link_to 'Edit', edit_product_path(product) %></td>
+          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><td>
+        <% end %>
+         <% if user_signed_in? %> 
+           <td><a href="/cart/<%= product.id %>" class="button">Add To Cart</a><td>
+         <% end %>
+        
       </tr>
+      
     <% end %>
   </tbody>
 </table>
