--- a/MobiV/app/views/products/show.html.erb
+++ b/MobiV/app/views/products/show.html.erb
@@ -14,6 +14,7 @@
   <strong>Price:</strong>
   <%= @product.price %>
 </p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
+<% if session[:login] == 1 %>
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+<% end %>
 <%= link_to 'Back', products_path %>
