Added Products templates

--- a/MobiV/app/assets/stylesheets/application.scss
+++ b/MobiV/app/assets/stylesheets/application.scss
@@ -52,3 +52,18 @@
    display:inline-block;   
 }
 
+.limit-text-home {  
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 4; /* number of lines to show */
+      -webkit-box-orient: vertical;  
+}
+
+.limit-text-products {  
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 5; /* number of lines to show */
+   -webkit-box-orient: vertical;  
+}
