--- a/MobiV/app/views/products/_form.html.erb
+++ b/MobiV/app/views/products/_form.html.erb
@@ -1,37 +1,42 @@
-<% provide(:title, "Products") %>
+
 
 <%= form_with(model: product, local: true) do |form| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
+      
         <% product.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <div class="alert alert-danger" role="alert">
+            <%= message %>
+          </div>
         <% end %>
-      </ul>
+     
     </div>
   <% end %>
 
   <div class="container">    
         <div class="mb-3">
-            <img src="" class="img-fluid" alt="This is a product image">
+            <%# <img src="" class="img-fluid" alt="This is a product image"> %>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" 
+                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#868e96"></rect>
+            </svg>
         </div>        
-        <div class="mb-3">
+        <div class="form-group mb-3">
             <%= form.text_field :title, class: "form-control" %>
         </div>
-        <div class="mb-3">
+        <div class="form-group mb-3">
              <%= form.text_field :price, class: "form-control" %>
         </div>    
-        <div class="mb-3">
+        <div class="form-group mb-3">
             <%= form.text_area :description, class: "form-control" %>
         </div>    
-</div>
-
-  
-<div class="field">
-  <div class="actions">
-    <%= form.submit %>
+  </div>  
+  <div class="field"> 
+    <div class="actions">
+      <%= form.submit %>
+    </div>
   </div>
-</div>
 <% end %>
