--- a/MobiV/app/views/products/show.html.erb
+++ b/MobiV/app/views/products/show.html.erb
@@ -1,20 +1,52 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, "Show") %>
+<div class="container">
+  <div class="row">
+    <div class="col mt-3">
+      <% if flash[:notice] %>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+          <span id="notice"><%= notice %></span>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>      
+      <% end %>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" 
+                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#868e96"></rect>
+      </svg>
+    </div>    
+    <div class="col col-lg-4">
+      <h2><%= @product.title %></h2>
+      <h6>$ <%= @product.price %></h6>
+      <% if user_signed_in? %> 
+        <a href="/cart/<%= @product.id %>" class="btn btn-dark">Add To Cart</a>
+      <% end %>
+      <% if session[:login] == 1 %>
+        <%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-dark mt-3' %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col mt-3">
+      <p><strong>Description:</strong></p>
+      <div class="border-bottom"></div>
+      <div class="mt-3">
+      <p><%= @product.description %>
+      </div>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <%= link_to 'Back', products_path, class: 'btn btn-dark' %>    
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-<% if session[:login] == 1 %>
-  <%= link_to 'Edit', edit_product_path(@product) %> |
-<% end %>
-<%= link_to 'Back', products_path %>
