--- a/MobiV/app/views/products/edit.html.erb
+++ b/MobiV/app/views/products/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Product</h1>
+<% provide(:title, "Edit") %>
 
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="row">
+    <div class="col mt-3">
+        <h1>Editing Product</h1>
+    </div>
+</div>
+<div class="row mt-3">
+    <%= render 'form', product: @product %>
+</div>
+<div class="row">
+    <div class="col">
+        <%= link_to 'Show', @product, class: 'btn btn-dark mt-3' %>
+        <%= link_to 'Back', products_path, class: 'btn btn-dark mt-3' %>
+    </div>
+</div>
