--- a/MobiV/app/views/products/index.html.erb
+++ b/MobiV/app/views/products/index.html.erb
@@ -1,38 +1,42 @@
+<% provide(:title, "Products") %>
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <% if session[:login] == 1 %> 
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><td>
-        <% end %>
-         <% if user_signed_in? %> 
-           <td><a href="/cart/<%= product.id %>" class="button">Add To Cart</a><td>
-         <% end %>
-        
-      </tr>
-      
+<div class="container-fluid">
+  <div class="row">
+    <h1>Products</h1>
+    <% if session[:login] == 1 %>
+      <%= link_to 'New Product', new_product_path %>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <div class="row">
+    <% @products.each do |product| %>      
+        <div class="card mb-3">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <%# <img src="..." class="card-img" alt="..."> %>
+               <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" 
+                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#868e96"></rect>
+               </svg>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><%= product.title %></h5>
+                <p class="card-text limit-text-products"><%= product.description %></p>
+                <%= link_to 'Show', product, class: 'btn btn-dark' %>
+                <% if session[:login] == 1 %> 
+                  <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-dark' %>
+                  <%= link_to 'Destroy', product, class: 'btn btn-dark', method: :delete, data: { confirm: 'Are you sure?' } %>
+                <% end %>
+                <% if user_signed_in? %> 
+                  <a href="/cart/<%= product.id %>" class="btn btn-dark">Add To Cart</a>
+                <% end %>
+              </div>
+            </div>
+          </div>        
+      </div>
+    <% end %>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
