--- a/MobiV/app/views/cart/index.html.erb
+++ b/MobiV/app/views/cart/index.html.erb
@@ -1,37 +1,45 @@
 <p id="notice"><%= notice %></p>
 
-<div id="itemsContainer">
-    <table id="customers">
+<div class="container-fluid">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Product</th>
+                <th scope="col">Pric</th>
+                <th scope="col">QTY</th>
+                <th scope="col">Sub Total</th>
+                <th scope="col">Dec/Inc</th>
+                <th scope="col">Remove</th>
+            </tr>
+        </thead>
         <% total = 0 %>
         <% @cart.each do |id, quantity| %>
-        
+
         <% item = Product.find_by_id(id) %>
-        
+
         <tr>
             <td>
-                <div class="image">
-                   
-                </div>
-                
+                <div class="image"></div>
             </td>
-            
             <td class="title"><%= link_to item.title, item %></td>
             <td class="price"><%= number_to_currency(item.price, :unit =>"€") %></td>
             <td class="quantity"><%= quantity %></td>
             <td class="price"><%= number_to_currency(quantity * item.price, :unit =>"€") %></td>
-            <td><a href="/cart/decrease/<%= item.id %>">Decrease</a></td>
-            <td><a href="/cart/remove/<%= item.id %>">Remove From Cart</a></td>
-
- 
+            <td><a href="/cart/decrease/<%= item.id %>" class="btn btn-dark">-</a>
+                <a href="/cart/increase/<%= item.id %>" class="btn btn-dark">+</a></td>
+            <td><a href="/cart/remove/<%= item.id %>" class="btn btn-dark">Remove</a></td>
         </tr>
-        
-            <% total += quantity * item.price %>
-         <% end %>
-         <tr>
-            Grand Total: <%= number_to_currency(total, :unit => "€") %>
-            <a href="/cart/clear" class="button">Clear Cart</a>
-            <a href="/checkout" class="button">Checkout</a>
-          </tr>
-           
+
+        <% total += quantity * item.price %>
+        <% end %>
+
     </table>
+        <div class="container">
+            Grand Total: <%= number_to_currency(total, :unit => "€") %>
+
+            <a href="/cart/clear" class="btn btn-dark">Clear Cart</a>
+            <a href="/checkout" class="btn btn-dark">Checkout</a>
+        </div>
+
 </div>
