--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -39,12 +39,7 @@
                 <% @products.each do |product| %>
                     <div class="col">
                         <div class="card text-center h-100" style="width: 18rem;">
-                            <%# <img src="..." class="card-img-top" alt="Image Scooter"> %>
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" 
-                            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#868e96"></rect>
-                            </svg>    
+                            <%= link_to (image_tag product.image_url, :class => "card-img-top"), product %>  
                                 <div class="card-body">
                                 <h5 class="card-title"><%= product.title %></h5>
                                 <p class="card-text limit-text-home text-left"><%= product.description %></p>
@@ -67,30 +62,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center">
-                    <div class="border-accessories">
-                        <img src="" class="img-fluid" alt="This is an image">
-                        <h3 class="display-5">Accessories A</h3>
-                        <p class="lead">description Accessories</p>
-                         <button type="button" class="btn btn-dark mb-3">Button</button>
+                <% @accessories.each do |accessory| %>
+                    <div class="col">
+                        <div class="card text-center h-100" style="width: 18rem;">
+                            <%= link_to (image_tag accessory.image_url, :class => "card-img-top"), accessory %>  
+                                <div class="card-body">
+                                <h5 class="card-title"><%= accessory.title %></h5>
+                                <p class="card-text limit-text-home text-left"><%= accessory.description %></p>
+                                <%= link_to 'Show', accessory, class: 'btn btn-dark' %>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col text-center">
-                    <div class="border-accessories">
-                        <img src="" class="img-fluid" alt="This is an image">
-                        <h3 class="display-5">Accessories B</h3>
-                        <p class="lead">description Accessories</p>
-                         <button type="button" class="btn btn-dark mb-3">Button</button>
-                    </div>
-                </div>
-                <div class="col text-center">
-                    <div class="border-accessories">
-                        <img src="" class="img-fluid" alt="This is an image">
-                        <h3 class="display-5">Accessories C</h3>
-                        <p class="lead">description Accessories</p>
-                         <button type="button" class="btn btn-dark mb-3">Button</button>
-                    </div>
-                </div>
+                <% end %>
             </div>
         </div>
     </div>
