--- a/MobiV/app/views/products/_form.html.erb
+++ b/MobiV/app/views/products/_form.html.erb
@@ -16,16 +16,17 @@
   <% end %>
 
   <div class="container">    
-        <div class="mb-3">
-            <%# <img src="" class="img-fluid" alt="This is a product image"> %>
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" 
-                preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-            </svg>
+        <div class="mb-3">            
+            <%= link_to (image_tag @product.image_url, :class => "img-fluid"), @product %>            
         </div>        
         <div class="form-group mb-3">
             <%= form.text_field :title, class: "form-control" %>
+        </div>
+        <div class="form-group mb-3">
+             <%= form.text_field :category, class: "form-control" %>
+        </div>
+        <div class="form-group mb-3">
+             <%= form.text_field :image_url, class: "form-control" %>
         </div>
         <div class="form-group mb-3">
              <%= form.text_field :price, class: "form-control" %>
