add continues shopping in Cart page

--- a/MobiV/app/views/cart/index.html.erb
+++ b/MobiV/app/views/cart/index.html.erb
@@ -37,7 +37,7 @@
     </table>
         <div class="container">
             Grand Total: <%= number_to_currency(total, :unit => "€") %>
-
+            <a href="/products" class="btn btn-dark">Continue Shopping</a>
             <a href="/cart/clear" class="btn btn-dark">Clear Cart</a>
             <a href="/checkout" class="btn btn-dark">Checkout</a>
         </div>
