--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -1,33 +1,28 @@
 <table id="customers">
-    <tr>
-         
-        <% @orders.limit(1).order(id: :desc).each do |order| %>  
-
-       <td>Order reference for the order you just placed <%= order.id %></td>
-        <% end %>
-    </tr>
-</table>    
-    
-    
-<table id="customers">
      <% @total = 0 %>
-    <%= @orders.id %> 
+    <% @orderitems.each do |id,quantity| %>
       <tr>
         <% item = Orderitem.find_by_id(id) %>
        
         <td><%= item.title %></td>
         <td><%= item.quantity %></td>
-       <td><%= number_to_currency(item.price, :unit => "€")%></td> 
+       <td><%=number_to_currency(item.price, :unit => "€")%></td> 
        <td><%= number_to_currency(item.quantity * item.price, :unit => "€") %></td>
        </tr>
        
-       <% timx = (item.quantity * item.price)%>  
+       <% timx = (item.quantity * item.price)%>  timx is a variable name which you can call whatever you like 
+
+     
+     
       <% @total += timx %>
       
       </tr>
     <% end %>
     
+    
     <tr>
+        
        <td>Order Total: &euro; <%= @total %></td>
+       
       </tr>
 </table>
