--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -1,33 +1,45 @@
-<table id="customers">
-    <tr>
-         
-        <% @orders.limit(1).order(id: :desc).each do |order| %>  
+<div id="itemsContainer">
+    <h1>Thank You<br>
+You have just placed an order <%=@order.id %></h1>
+</div>
 
-       <td>Order reference for the order you just placed <%= order.id %></td>
-        <% end %>
-    </tr>
-</table>    
+
+   
     
     
 <table id="customers">
      <% @total = 0 %>
-    <%= @orders.id %> 
+    <% @orderitems.each do |id,quantity| %>
       <tr>
         <% item = Orderitem.find_by_id(id) %>
        
         <td><%= item.title %></td>
         <td><%= item.quantity %></td>
-       <td><%= number_to_currency(item.price, :unit => "€")%></td> 
+       <td><%=number_to_currency(item.price, :unit => "€")%></td> 
        <td><%= number_to_currency(item.quantity * item.price, :unit => "€") %></td>
        </tr>
        
-       <% timx = (item.quantity * item.price)%>  
+       <% timx = (item.quantity * item.price)%>
+
+     
+     
       <% @total += timx %>
       
       </tr>
     <% end %>
     
+    
     <tr>
+        
        <td>Order Total: &euro; <%= @total %></td>
+       
+      <% shipping = 30 %>
+      <% @overall = shipping + @total%>
+      <tr>
+          <td>Shipping &euro;30</td>
+          <td>You Pay &euro; <%= @overall %></td>
+      </tr>
+
+       
       </tr>
 </table>
