--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body>  
     <%# Navbar %>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">MobiV</a>     
@@ -33,6 +33,9 @@
             <li class="nav-item">
               <%= link_to "View Cart", "/cart", class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to "Orders", "/orders", class: 'nav-link' %>
+            </li>
             <% end %>
 
             <li class="nav-item">
@@ -47,13 +50,20 @@
             <li class="nav-item"><%= link_to 'Register', new_user_registration_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
             <% end %>
-
+            <li class="">
+              
+            </li>
                      
           </ul>
         </div>
-    </nav>
+    </nav>    
     <%# Body Content %>
     <div class="container">
+    <div class="row">
+      <div class="col">
+        <%=render 'layouts/search'%>
+      </div>
+    </div>
       <%= yield %>
     </div>
     <%# Footer %>
