--- a/MobiV/app/views/layouts/_search.html.erb
+++ b/MobiV/app/views/layouts/_search.html.erb
@@ -1,5 +1,5 @@
-<%= form_tag("/search", :method => "post") do %>
-<%= label_tag(:q, "Search for:") %>
-<%= text_field_tag(:q) %>
-<%= submit_tag("Search") %>
+<%= form_tag("/search", :method => "post", :class => "form-inline my-2 my-lg-0") do %>
+
+<%= text_field_tag(:q, nil ,class:'form-control mr-sm-2', placeholder:'Search') %>
+<%= submit_tag("Search", class:'btn btn-outline-success my-2 my-sm-0') %>
 <% end %>
