--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>    
     <div class="row">
         <div class="col">
             <div class="row">
@@ -74,6 +74,20 @@
                         </div>
                     </div>
                 <% end %>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+             <div class="row">
+                <div class="col align-self-center pt-md-5 px-md-5 text-center">
+                    <div class="my-3 p-3">
+                        <h2 class="display-5">Popular products</h2>                        
+                    </div>                
+                </div>
+            </div>
+            <div class="row">
+            <%=render 'layouts/popular'%>
             </div>
         </div>
     </div>
