--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "Home") %>
 
+<% if user_signed_in? %>
+<%= render 'layouts/messages' %>
+<% end %>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col">
