--- a/MobiV/app/views/main/about.html.erb
+++ b/MobiV/app/views/main/about.html.erb
@@ -1,14 +1,56 @@
 <% provide(:title, "About") %>
 
 <div class="container">
-    <div class="row">
-		<div class="col">			
-			<h1>About <span>Mobiv</span></h1>
-			<h3>Lorem ipsum dolor sit amet </h3>
-			<p class="about-paddingB">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet dolor libero, eget venenatis mauris finibus dictum. Vestibulum quis elit eget neque porttitor congue non sit amet dolor. Proin pretium purus a lorem ornare </p>
-			<p>sed lobortis pulvinar. Integer laoreet mi id eros porta euismod. Suspendisse potenti. Nulla eros mauris, convallis et sem tempus, viverra hendrerit sapien</p>				
-	    </div>
-    </div>
+	<div class="row">
+		<div class="col">
+			<h1>We Believe</h1>
+			<p>Technology has made it infinitely easier to communicate and far more difficult to connect—with the
+				people, places, and experiences that mean the most to us. Unagi helps bridge that divide by bringing all
+				the things you want be close to, a little bit easier, cheaper, and way more fun to get to. Your office,
+				your lecture hall, that new Ramen place, the friend you’re dying to take to the new Ramen place.</p>
+		</div>
+
+		<div class="col">
+			<%= image_tag "about01.jpg" %>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<%= image_tag "about02.jpg" %>
+		</div>
+		<div class="col">
+			<h1>How We Got Here</h1>
+			<p>We tried subways and Ubers, electric bikes and bike shares and even a skateboard. We sat in traffic,
+				missed critical meetings, got grease on our pants and dirty looks when we lugged our bikes on the
+				subway. We paid crazy parking fees (and fines) and pulled our hair out waiting at empty bike stations.
+				We liked the scooter shares. All that time saved. All that fresh air. But they just always let us down.
+				They weren’t there when we needed them or weren’t charged and weren’t powerful enough when they were. In
+				the end, maybe we don’t like to share. And now, we don’t have to.</p>
+		</div>
+
+
+	</div>
 </div>
 
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<h1>How We Do It</h1>
+			<p>First, we designed the finest electric scooter on earth. Our mission is freedom. We are hellbent on
+				liberating people from the tyranny of transportation frustrations—the costs, inconveniences, the carbon
+				emissions. So we built the ideal personal liberation device.</p>
 
+			<p>Then we figured out how to make it affordable. Our approach is direct-to-consumer, which allows us to
+				put an Unagi scooter in the hands of everyone who could use one. Our financing options make that even
+				easier, meaning you can cruise away in a brand-new Unagi for the prices of a daily oat-milk latte. </p>
+		</div>
+
+
+		<div class="col">
+			<%= image_tag "about03.jpg" %>
+		</div>
+	</div>
+
+</div>
