--- a/MobiV/app/assets/stylesheets/application.scss
+++ b/MobiV/app/assets/stylesheets/application.scss
@@ -67,3 +67,17 @@
    -webkit-line-clamp: 5; /* number of lines to show */
    -webkit-box-orient: vertical;  
 }
+
+.map-container-section {
+   overflow:hidden;
+   padding-bottom:56.25%;
+   position:relative;
+   height:0;
+ }
+ .map-container-section iframe {
+   left:0;
+   top:0;
+   height:100%;
+   width:100%;
+   position:absolute;
+ }
