--- a/MobiV/app/assets/stylesheets/application.scss
+++ b/MobiV/app/assets/stylesheets/application.scss
@@ -81,3 +81,12 @@
    width:100%;
    position:absolute;
  }
+
+ .md-form {
+    padding-bottom: 15px;
+    padding-top: 15px;
+ }
+
+ .md-textarea {
+    height: 200px;
+ }
