--- a/MobiV/app/views/main/contact.html.erb
+++ b/MobiV/app/views/main/contact.html.erb
@@ -6,57 +6,49 @@
     <!-- Section heading -->
     <h2 class="h1-responsive font-weight-bold text-center my-5">We're here to help</h2>
     <!-- Section description -->
-    <h5>Customer service</h5>
-    <p class="text-center w-responsive mx-auto pb-5">If you experience any technical issues, please contact your Segway
+    <h5 class="h5-responsive font-weight-bold text-center my-5">Customer service</h5>
+    <p class="text-center w-responsive mx-auto pb-4">If you experience any technical issues, please contact your Segway
         retailer or visit your nearest Segway service point. Still have questions? Fill in the contact form below and we
         will get back to you.</p>
 
-        <h5>Careers</h5>
-    <p class="text-center w-responsive mx-auto pb-5">Send you CV to <a href = "mailto: careers@mobiV.com">careers@mobiV.com</a> for a list of current employment opportunities.</p>
+    <h5 class="h5-responsive font-weight-bold text-center my-4">Careers</h5>
+    <p class="text-center w-responsive mx-auto pb-5">Send you CV to <a
+            href="mailto: careers@mobiV.com">careers@mobiV.com</a> for a list of current employment opportunities.</p>
 
-        <h5>Press</h5>
-    <p class="text-center w-responsive mx-auto pb-5">For any local press inquiries, please fill in the contact form.</p>
-
-    <!-- Grid row -->
+       <!-- Grid row -->
     <div class="row">
 
         <!-- Grid column -->
         <div class="col-lg-5 mb-lg-0 mb-4">
+            <form action="https://formspree.io/xzbpqqbj" method="POST">
+                <!-- Form with header -->
+                <div class="card">
+                    <div class="card-body">
+                        <!-- Header -->
+                        <div class="form-header blue accent-1">
+                            <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
+                        </div>
+                        <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
+                        <!-- Body -->
+                        <div class="md-form">
+                            <i class="fas fa-envelope prefix grey-text"></i>&nbsp;<label for="form-email">Your
+                                email</label>
+                            <input type="text" name="_replyto" class="form-control">
 
-            <!-- Form with header -->
-            <div class="card">
-                <div class="card-body">
-                    <!-- Header -->
-                    <div class="form-header blue accent-1">
-                        <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
-                    </div>
-                    <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
-                    <!-- Body -->
-                    <div class="md-form">
-                        <i class="fas fa-user prefix grey-text"></i>
-                        <input type="text" id="form-name" class="form-control">
-                        <label for="form-name">Your name</label>
-                    </div>
-                    <div class="md-form">
-                        <i class="fas fa-envelope prefix grey-text"></i>
-                        <input type="text" id="form-email" class="form-control">
-                        <label for="form-email">Your email</label>
-                    </div>
-                    <div class="md-form">
-                        <i class="fas fa-tag prefix grey-text"></i>
-                        <input type="text" id="form-Subject" class="form-control">
-                        <label for="form-Subject">Subject</label>
-                    </div>
-                    <div class="md-form">
-                        <i class="fas fa-pencil-alt prefix grey-text"></i>
-                        <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
-                        <label for="form-text">Send message</label>
-                    </div>
-                    <div class="text-center">
-                        <button class="btn btn-light-blue">Submit</button>
+                        </div>
+                        <div class="md-form">
+                            <i class="fas fa-pencil-alt prefix grey-text"></i>&nbsp;<label for="form-text">Your
+                                message</label>
+                            <textarea id="message" name="message" class="form-control md-textarea" rows="3"></textarea>
+
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary"> Submit</button>
+                        </div>
+                        <div class="status"></div>
                     </div>
                 </div>
-            </div>
+            </form>
             <!-- Form with header -->
 
         </div>
