--- a/MobiV/app/views/orders/edit.html.erb
+++ b/MobiV/app/views/orders/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Order</h1>
+<% provide(:title, "Edit Order") %>
 
-<%= render 'form', order: @order %>
-
-<%= link_to 'Show', @order %> |
-<%= link_to 'Back', orders_path %>
+<div class="container h-100 mt-3">
+  <div class="row h-100 justify-content-center align-items-center">   
+    <div class="col-8 col-md-8 col-lg-6 mt-3">
+        <div class="row">
+            <h2>Editing Order</h2>
+        </div>
+        <div class="row mt-3">
+            <%= render 'form', order: @order %>    
+        </div>
+        <div class="row mt-3">
+            <%= link_to 'Back', orders_path, class: 'btn btn-dark' %>
+        </div>
+    </div>
+  </div>
+</div>
