--- a/MobiV/app/views/orders/show.html.erb
+++ b/MobiV/app/views/orders/show.html.erb
@@ -1,48 +1,81 @@
-<div id="itemsContainer">
+<% provide(:title, "Show Order") %>
 
 <p id="notice"><%= notice %></p>
 
-<% if @order.user.email == @user.email %>
-<h1>Order Details</h1>
-<table id="customers">
-  <tr>
-    <td>Order date:</td>
-    <td>Ordered By</td>
-    <td>Order date:</td>
-  </tr>
-  
-  <tr>
-    <td><%= @order.order_date %></td>
-    <td><%= @order.user %></td>
-    <td><%= @order.status %></td>
-    
-  </tr>
-  
-  <tr>
-    <td><%= link_to 'Edit', edit_order_path(@order), :class =>"btn" %></td>
-    <td><%= link_to 'Back', orders_path, :class =>"btn" %></td>
-    <td><a href="/paid/<%= @order.id %>" class="btn">Pay Now</a></h2></td>
-  </tr>
-  </table>
-
-<h2>Order Items</h2>
-
- <table id="customers">
-   <% @orderitems.each do |orderitem| %>
-      <tr>
-        <td><%= orderitem.created_at %></td>
-        
-        <td><%= orderitem.title %></td>
-       <td><%= orderitem.order_id %></td>
-       
-      </tr>
-    <% end %>
- 
-   <tr></tr>
-   </table>
-      <% else %>
+<div class="container">
+  <% if @order.user.email == @user.email %>
+  <div class="row">
+    <h1>Order Details</h1>
+  </div>
+  <div class="row">
+    <table class="table table-hover table-sm">
+      <thead>
+        <tr>
+          <th scope="col">Order</th>
+          <th scope="col">Order Date</th>
+          <th scope="col">Ordered By</th>
+          <th scope="col">Order Status</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <%= @order.id %>
+          </td>
+          <td>
+            <%= @order.order_date %>
+          </td>
+          <td>
+            <%= @order.user.email %>
+          </td>
+          <td>
+            <%= @order.status %>
+          </td>
+          <td>
+            <%= link_to 'Edit', edit_order_path(@order), :class =>"btn btn-outline-primary btn-sm" %>                      
+          </td>        
+        </tr>
+      </tbody>
+      </table>
+    </div>
+    <div class="row">
+      <h3>Order Items</h3>
+    </div>
+    <div class="row">
+    <table class="table table-hover table-sm">
+      <caption>List of items</caption>
+      <thead>
+        <tr>
+          <th scope="col">Product</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orderitems.each do |orderitem| %>
+          <tr>            
+            <td>
+              <%= orderitem.title %>
+            </td>
+            <td>
+              <%= orderitem.quantity %>
+            </td>
+            <td>
+              <%= orderitem.price %>
+            </td>
+          </tr>
+        <% end %> 
+      </tbody>
+    </table>     
+    </div>
+    <div class="row">
+      <%= link_to 'Back', orders_path, :class =>"btn btn-dark" %>      
+    </div>
+  <% else %>
+    <div class="row">
       <h1>You did not place this order</h1>
-<% end %>
-
-   </div>
+    </div>
+  <% end %>  
+</div>
 
