--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -1,6 +1,8 @@
+<% provide(:title, "Checkout") %>
+
 <div id="itemsContainer">
     <h1>Thank You<br>
-You have just placed an order <%=@order.id %></h1>
+You have just placed an order #<%= @order.id %></h1>
 </div>
 
 
@@ -16,7 +18,7 @@ You have just placed an order <%=@order.id %></h1>
         <td><%= item.title %></td>
         <td><%= item.quantity %></td>
        <td><%=number_to_currency(item.price, :unit => "€")%></td> 
-       <td><%= number_to_currency(item.quantity * item.price, :unit => "€") %></td>
+      
        </tr>
        
        <% timx = (item.quantity * item.price)%>
@@ -43,3 +45,13 @@ You have just placed an order <%=@order.id %></h1>
        
       </tr>
 </table>
+<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_xclick">
+<input type="hidden" name="business" value="company2@liammccabe.ie">
+<input type="hidden" name="item_name" value="Mobiv <%= @order.id %>">
+<input type="hidden" name="currency_code" value="EUR">
+<input type="hidden" name="amount" value="<%= @overall %>">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+<input type="hidden" name="return" value="https://rails-container-liamme.c9users.io/" >
+</form>
+
