--- a/MobiV/app/views/cart/index.html.erb
+++ b/MobiV/app/views/cart/index.html.erb
@@ -1,45 +1,51 @@
+<% provide(:title, "Cart") %>
+
 <p id="notice"><%= notice %></p>
 
-<div class="container-fluid">
-    <table class="table table-hover">
-        <thead>
+<div class="container h-100 mt-3">
+  <div class="row h-100 justify-content-center align-items-center">   
+    <div class="col-12 col-md-10 col-lg-10 mt-3">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Pric</th>
+                    <th scope="col">QTY</th>
+                    <th scope="col">Sub Total</th>
+                    <th scope="col">Dec/Inc</th>
+                    <th scope="col">Remove</th>
+                </tr>
+            </thead>
+            <% total = 0 %>
+            <% @cart.each do |id, quantity| %>
+            <% item = Product.find_by_id(id) %>
+
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Product</th>
-                <th scope="col">Pric</th>
-                <th scope="col">QTY</th>
-                <th scope="col">Sub Total</th>
-                <th scope="col">Dec/Inc</th>
-                <th scope="col">Remove</th>
+                <td>
+                    <div class="image"></div>
+                </td>
+                <td class="title"><%= link_to item.title, item %></td>
+                <td class="price"><%= number_to_currency(item.price, :unit =>"€") %></td>
+                <td class="quantity"><%= quantity %></td>
+                <td class="price"><%= number_to_currency(quantity * item.price, :unit =>"€") %></td>
+                <td><a href="/cart/decrease/<%= item.id %>" class="btn btn-dark">-</a>
+                    <a href="/cart/increase/<%= item.id %>" class="btn btn-dark">+</a></td>
+                <td><a href="/cart/remove/<%= item.id %>" class="btn btn-dark">Remove</a></td>
             </tr>
-        </thead>
-        <% total = 0 %>
-        <% @cart.each do |id, quantity| %>
 
-        <% item = Product.find_by_id(id) %>
+            <% total += quantity * item.price %>
+            <% end %>
 
-        <tr>
-            <td>
-                <div class="image"></div>
-            </td>
-            <td class="title"><%= link_to item.title, item %></td>
-            <td class="price"><%= number_to_currency(item.price, :unit =>"€") %></td>
-            <td class="quantity"><%= quantity %></td>
-            <td class="price"><%= number_to_currency(quantity * item.price, :unit =>"€") %></td>
-            <td><a href="/cart/decrease/<%= item.id %>" class="btn btn-dark">-</a>
-                <a href="/cart/increase/<%= item.id %>" class="btn btn-dark">+</a></td>
-            <td><a href="/cart/remove/<%= item.id %>" class="btn btn-dark">Remove</a></td>
-        </tr>
-
-        <% total += quantity * item.price %>
-        <% end %>
-
-    </table>
-        <div class="container">
+        </table>
+        <div class="mt-3">
             Grand Total: <%= number_to_currency(total, :unit => "€") %>
+        </div>
+        <div class="mt-3">            
             <a href="/products" class="btn btn-dark">Continue Shopping</a>
             <a href="/cart/clear" class="btn btn-dark">Clear Cart</a>
             <a href="/checkout" class="btn btn-dark">Checkout</a>
         </div>
-
+    </div>
+  </div>
 </div>
