--- a/MobiV/app/views/main/home.html.erb
+++ b/MobiV/app/views/main/home.html.erb
@@ -5,95 +5,66 @@
 <% end %>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <div class="pt-md-5 px-md-5 text-center">
-                <div class="my-3 p-3">
-                    <h2 class="display-5">Welcome</h2>
-                    <p class="lead">subheader</p>
+    <div class="row home-section-height main-picture align-items-end">        
+            <div class="text-center home-main-btn">
+                <div class="home-main-header">
+                    <h1>Freedom of Movement</h1>
                 </div>
-                <div class="my-3 p-3">
-                    <p>This is text for the product page This is text for the product page This is text for the product page This is text for the product page This is text for the product page</p>
+                <div>               
+                    <a href="/shop" class="btn btn-dark btn-lg">Shop Now</a>
                 </div>
-                <div class="my-3 p-3">
-                    <button type="button" class="btn btn-dark">Button</button>
-                    <button type="button" class="btn btn-light">Button</button>
-                </div>
-            </div>
-        </div>    
-        <div class="col">
-            <div class="pt-md-5 px-md-5 text-center">
-                <div class="my-3 p-3">
-                    <img src="" class="img-fluid" alt="This is an image">
+            </div>                   
+    </div>
+    <div class="row home-section-height align-items-center">       
+            <div class="home-section-box">
+                <div class="my-3 p-3 float-right">
+                    <img src="/assets/home1.jpg" class="img-fluid" alt="This is an image">
                 </div>
             </div>
+            <div class=" home-section-box">
+                <div class="my-3 p-3 float-left home-section-one">
+                    <h2>Design, Artistry and Engineering.</h2>
+                    <p>How to Build a superior scooter.</p>
+                </div>
+            </div>
+    </div>
+    <div class="row home-section-height align-items-center">       
+            <div class="home-section-box">
+                <div class="my-3 p-3 float-right home-section-two">
+                    <h2>Money, Time and Joy.</h2>
+                    <p>Could you use more of any of those? Unagi wipes out your Uber/Lyft/Lime/Bird costs, 
+                    reduces travel time, and adds the thrill of the ride to every trip. But maybe you're already goo.
+                    </p>
+                </div>
+            </div>        
+            <div class="home-section-box">
+                <div class="my-3 p-3 float-left">
+                     <img src="/assets/home2.jpg" class="img-fluid" alt="This is an image">
+                </div>
+            </div>        
+    </div>
+    <div class="row home-section-height line-home-section">
+        <div class=" col grey-color-section text-center">
+            <p>The best all-around electric scooter. It's an excellent blend of looks,
+                performance and ease-of-use.</p>
         </div>
-    </div>    
-    <div class="row">
-        <div class="col">
-            <div class="row">
-                <div class="col align-self-center pt-md-5 px-md-5 text-center">
-                    <div class="my-3 p-3">
-                        <h2 class="display-5">Scooters</h2>
-                        <p class="lead">subheader</p>
-                    </div>                
+    </div>
+    <div class="row home-section-height">
+                <div class="pt-md-5 px-md-5 text-center home-section-say-header">
+                   <h2>What people say about us</h2>
                 </div>
-            </div>
-            <div class="row">
-                <% @products.each do |product| %>
-                    <div class="col">
-                        <div class="card text-center h-100" style="width: 18rem;">
-                            <%= link_to (image_tag product.image_url, :class => "card-img-top"), product %>  
-                                <div class="card-body">
-                                <h5 class="card-title"><%= product.title %></h5>
-                                <p class="card-text limit-text-home text-left"><%= product.description %></p>
-                                <%= link_to 'Show', product, class: 'btn btn-dark' %>
-                            </div>
-                        </div>
+                <div class="pt-md-5 px-md-5 text-center home-section-say-header">
+                    <div class="my-3 p-3 home-section-say-message">
+                        <p>The electric scooter you won't want to share with anyone.</p>
                     </div>
-                <% end %>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="row">
-                <div class="col align-self-center pt-md-5 px-md-5 text-center">
-                    <div class="my-3 p-3">
-                        <h2 class="display-5">Accessories</h2>
-                        <p class="lead">subheader accessories</p>
-                    </div>                
-                </div>
-            </div>
-            <div class="row">
-                <% @accessories.each do |accessory| %>
-                    <div class="col">
-                        <div class="card text-center h-100" style="width: 18rem;">
-                            <%= link_to (image_tag accessory.image_url, :class => "card-img-top"), accessory %>  
-                                <div class="card-body">
-                                <h5 class="card-title"><%= accessory.title %></h5>
-                                <p class="card-text limit-text-home text-left"><%= accessory.description %></p>
-                                <%= link_to 'Show', accessory, class: 'btn btn-dark' %>
-                            </div>
-                        </div>
+                    <div class="my-3 p-3 home-section-say-message">
+                        <p>No other scooter compares in terms of build quality.</p>
                     </div>
-                <% end %>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-             <div class="row">
-                <div class="col align-self-center pt-md-5 px-md-5 text-center">
-                    <div class="my-3 p-3">
-                        <h2 class="display-5">Popular products</h2>                        
-                    </div>                
-                </div>
-            </div>
-            <div class="row">
-            <%=render 'layouts/popular'%>
-            </div>
-        </div>
-    </div>
-</div>
+                    <div class="my-3 p-3 home-section-say-message">
+                        <p>Scooters are a mix of design and power.</p>
+                    </div>
+                </div>                   
+    </div>   
+</div>   
+
 
