--- a/MobiV/app/views/orders/index.html.erb
+++ b/MobiV/app/views/orders/index.html.erb
@@ -1,32 +1,45 @@
+<% provide(:title, "Orders") %>
 <p id="notice"><%= notice %></p>
 
-<h1>Orders</h1>
+<div class="container">
 
-<table>
-  <thead>
-    <tr>
-      <th>Order date</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="row">
+    <h1>Orders</h1>
+  </div class="row">
 
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.order_date %></td>
-        <td><%= order.user_id %></td>
-        <td><%= order.status %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Order', new_order_path %>
+  <div class="row">
+    <table class="table table-hover table-sm">
+      <caption>List of orders</caption>
+      <thead>
+        <tr>
+          <th scope="col">Order date</th>
+          <th scope="col">User</th>
+          <th scope="col">Status</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <% if order.user.email == @user.email %>
+          <tr>
+            <td>
+              <%= order.order_date %>
+            </td>
+            <td>
+              <%= order.user_id %>
+            </td>
+            <td>
+              <%= order.status %>
+            </td>
+            <td>
+              <%= link_to 'Show', order, class: 'btn btn-outline-primary btn-sm' %>
+              <%= link_to 'Edit', edit_order_path(order), class: 'btn btn-outline-primary btn-sm' %>        
+              <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-sm' %>
+            </td>        
+          </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
