--- a/MobiV/app/views/products/_form.html.erb
+++ b/MobiV/app/views/products/_form.html.erb
@@ -14,12 +14,8 @@
      
     </div>
   <% end %>
-
-  <div class="container">    
-        <div class="mb-3">            
-            <%= link_to (image_tag @product.image_url, :class => "img-fluid"), @product %>            
-        </div>        
-        <div class="form-group mb-3">
+ 
+        <div class="form-group mb-3 mt-3">
             <%= form.text_field :title, class: "form-control" %>
         </div>
         <div class="form-group mb-3">
@@ -34,10 +30,10 @@
         <div class="form-group mb-3">
             <%= form.text_area :description, class: "form-control" %>
         </div>    
-  </div>  
-  <div class="field"> 
+   
+  
     <div class="actions">
-      <%= form.submit %>
+      <%= form.submit 'Update Product', class: 'btn btn-dark mt-3' %>
     </div>
-  </div>
+
 <% end %>
