--- a/MobiV/app/views/products/edit.html.erb
+++ b/MobiV/app/views/products/edit.html.erb
@@ -1,16 +1,16 @@
 <% provide(:title, "Edit") %>
 
-<div class="row">
-    <div class="col mt-3">
-        <h1>Editing Product</h1>
-    </div>
-</div>
-<div class="row mt-3">
-    <%= render 'form', product: @product %>
-</div>
-<div class="row">
-    <div class="col">
-        <%= link_to 'Show', @product, class: 'btn btn-dark mt-3' %>
-        <%= link_to 'Back', products_path, class: 'btn btn-dark mt-3' %>
-    </div>
+<div class="container h-100 mt-3">
+  <div class="row h-100 justify-content-center align-items-center">   
+    <div class="col-10 col-md-8 col-lg-8 mt-3">
+
+    
+        <h1>Editing Product</h1>    
+
+
+        <%= render 'form', product: @product %>
+
+        <%= link_to 'Back', products_path, class: 'btn btn-dark mt-3' %> 
+    </div>    
+  </div>
 </div>
