--- a/MobiV/app/views/main/contact.html.erb
+++ b/MobiV/app/views/main/contact.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Contact") %>
 
 <!-- Section: Contact v.1 -->
+<div class="container">
 <section class="my-5">
 
     <!-- Section heading -->
@@ -96,3 +97,4 @@
 </section>
 <!-- Section: Contact v.1 -->
 <!--Section: Contact v.2-->
+</div>
