--- a/MobiV/app/views/products/index.html.erb
+++ b/MobiV/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Products") %>
 <p id="notice"><%= notice %></p>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <h1>Products</h1>
     <% if session[:login] == 1 %>
