--- a/MobiV/app/views/products/search.html.erb
+++ b/MobiV/app/views/products/search.html.erb
@@ -1,3 +1,5 @@
+
+<div class="container">
 <h2>You Searched Our Product Catalog For <%= @search_term %></h2>
 
 <% if @products.length == 0  %>
@@ -35,3 +37,4 @@
       </tr>
     <% end %>
 </table>
+</div>
