--- a/MobiV/app/views/cart/createOrder.html.erb
+++ b/MobiV/app/views/cart/createOrder.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Checkout") %>
 
+<div class="container">
 <div id="itemsContainer">
     <h1>Thank You<br>
 You have just placed an order #<%= @order.id %></h1>
@@ -21,12 +22,9 @@ You have just placed an order #<%= @order.id %></h1>
       
        </tr>
        
-       <% timx = (item.quantity * item.price)%>
-
-     
-     
-      <% @total += timx %>
-      
+       <% timx = (item.quantity * item.price)%>   
+       <% @total += timx %>
+       <% session[:total_cart_price] = @total %>
       </tr>
     <% end %>
     
@@ -47,7 +45,7 @@ You have just placed an order #<%= @order.id %></h1>
 </table>
 <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_xclick">
-<input type="hidden" name="business" value="company2@liammccabe.ie">
+<input type="hidden" name="business" value="sb-t47tgt1415375@business.example.com">
 <input type="hidden" name="item_name" value="Mobiv <%= @order.id %>">
 <input type="hidden" name="currency_code" value="EUR">
 <input type="hidden" name="amount" value="<%= @overall %>">
@@ -55,3 +53,4 @@ You have just placed an order #<%= @order.id %></h1>
 <input type="hidden" name="return" value="https://rails-container-liamme.c9users.io/" >
 </form>
 
+</div>
