--- a/MobiV/app/views/layouts/application.html.erb
+++ b/MobiV/app/views/layouts/application.html.erb
@@ -53,9 +53,14 @@
             <% if user_signed_in? %>
             <li class="nav-item"><%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Sign out', destroy_user_session_path, :method => :delete, class: 'nav-link' %></li>
+            <li class="nav-item">
+              <a href="/admin" class="nav-link">
+                <i class="fa fa-shopping-cart"> &euro; <%=  session[:total_cart_price]  %></i> (<%= session[:total_items] %>)
+              </a>               
+            </li>
             <% else %>
             <li class="nav-item"><%= link_to 'Register', new_user_registration_path, class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>            
             <% end %>            
           </ul>         
         </div>
